# ros_music_adapter

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  activity.py  dependencies.rosinstall  dummy_network.py  loop.music  package.xml  rate.h  ros_command_adapter.cpp  ros_command_adapter.h  ros_command_adapter.music  ros_sensor_adapter.cpp  ros_sensor_adapter.h  test.music
adapters/: activity.py  argmax_adapter.cpp  argmax_adapter.h  connect.cpp  connect.h  converge.cpp  converge.h  discretize.cpp  discretize.h  pca.py  ros_command_adapter.cpp  ros_command_adapter.h  ros_event_sensor_adapter.cpp  ros_event_sensor_adapter.h  ros_sensor_adapter.cpp  ros_sensor_adapter.h  round_adapter.cpp  round_adapter.h  zhelpers.hpp  zmq_in_adapter.cpp  zmq_in_adapter.h  zmq_out_adapter.cpp  zmq_out_adapter.h
catkin_ws/src/jubot/: CMakeLists.txt  package.xml
catkin_ws/src/jubot/config/gazebo/: demo_world.sdf  empty_world.sdf
catkin_ws/src/jubot/launch/: demo.launch  empty.launch
catkin_ws/src/jubot/src/: cmd_bridge.cpp  laserscan_bridge.cpp
cmake/modules/: FindMUSIC.cmake
decoder/: latency_decoder.cpp  latency_decoder.h  linear_readout.cpp  linear_readout.h
doc/: HOWTO.lyx
encoder/: iaf_neuron.h  latency_encoder.cpp  latency_encoder.h  nef_encoder.cpp  nef_encoder.h  poisson_encoder.cpp  poisson_encoder.h  rate_encoder.cpp  rate_encoder.h
examples/: README.txt
examples/braitenberg3/: braitenberg3.music  braitenberg3_not_working.music  braitenberg3_not_working_0.music  braitenberg3_not_working_nest.music  braitenberg3_working.music  braitenberg3_working_0.music  braitenberg3_working_nest.music  dummy_network.py
examples/pca/: pca.music
examples/pioneer3at/: CMakeLists.txt  package.xml
examples/pioneer3at/config/gazebo/: demo_world.sdf  demo_world.sdf.bak  tmaze.sdf  tmaze3.sdf
examples/pioneer3at/launch/: demo.launch  demo_hardware.launch  ps3joy.launch  tmaze.launch  tmaze_hardware.launch
examples/pioneer3at/launch/core/: gazebo_demo.launch  gazebo_demo.launch.bak  gazebo_tmaze.launch
examples/pioneer3at/launch/lidar/: gazebo_hokuyo.launch
examples/pioneer3at/scripts/: teleop_joy
measurements/: NEURON_measurement.py  bandwidth_latency_plotter.py  bandwidth_plotter.py  bandwidth_scanner.py  brunel_delta_nest.py  dummy_network.py  input_scalability_plotter.py  input_scalability_scanner.py  input_scalability_scanner_nef.py  input_scalability_scanner_poisson.py  input_scalability_scanner_rate.py  latency_plotter.py  latency_scalability_plotter.py  latency_scalability_scanner.py  latency_scanner.py  nest_rtf_plotter.py  nest_rtf_scanner.py  nest_scalability_plotter.py  nest_scalability_scanner.py  nest_scalability_test.py  output_scalability_plotter.py  output_scalability_scanner.py  overhead_plotter  ps_mem.py  pyNEST_measurement.py  pyNEST_measurement_with_brunel.py
